--- a/components/styles/header/title.css
+++ b/components/styles/header/title.css
@@ -19,6 +19,7 @@ text-align: center;
     justify-content: center;
     display: flex;
     text-align: center;
+    align-items: center;
 }
 
 #title{
@@ -33,6 +34,7 @@ background: #81C43B;
 
 .button-in h4{
     font-size: 16px;
+    margin-bottom: 0;
 }
 
 
@@ -83,6 +85,10 @@ border: 1px solid #794CFF;
 background: #794CFF;
 }
 
+.title-forms a:hover{
+    background: #5c2cec;
+}
+
 .title-forms {
     border: none;
     text-align: center;
@@ -100,6 +106,8 @@ background: #794CFF;
     border-radius: 17px 17px 17px 17px;
     background: #81C43B;
 font-size: 16px;
+margin-bottom: 0;
+color: #fff;
 }
 
 
