--- a/components/styles/main/download.css
+++ b/components/styles/main/download.css
@@ -32,9 +32,10 @@ margin-bottom: 100px;
         flex-direction: column;
         padding: 32px 35px;
         gap: 32px;
-        border-radius: 0 0 0 0
     }
-
+#download {
+    background: #796EFF;
+}
     .download-with{
         flex-direction: column;
         gap: 25px;
