--- a/components/styles/footer/section-footer.css
+++ b/components/styles/footer/section-footer.css
@@ -42,3 +42,36 @@ font-weight: 400;
 
 }
 
+#footer{
+    border-bottom: 0.5px solid #968d8d;
+    padding-bottom: 80px;
+
+
+}
+
+.menu-drop{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+@media (max-width : 568px){
+    .group ul{
+        display: none   ;
+    }
+
+    
+
+    .group-download ul{
+        display: flex;
+    }
+
+    .footer-groups{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+}
+
