--- a/components/styles/footer/footer.css
+++ b/components/styles/footer/footer.css
@@ -1,8 +1,9 @@
 @import './section-footer.css';
+@import './footer-bottom.css';
 
 
 footer {
     background: #1D2830;
     color: #fff;
-    padding:80px  0;
+    padding-top: 80px;
 }
