--- a/components/styles/main/download.css
+++ b/components/styles/main/download.css
@@ -23,8 +23,12 @@ margin-top: 100px;
 margin-bottom: 100px;
 }
 
+
 .download-text h2{
     color: #fff ;
+}
+#check1, #check2,#check3,label{
+    display: none;
 }
 
 @media (max-width : 568px){
@@ -33,6 +37,42 @@ margin-bottom: 100px;
         padding: 32px 35px;
         gap: 32px;
     }
+
+
+
+
+    #check1+.drop1+ul{
+        display: none;
+    }
+    #check1:checked+.drop1+ul{
+        display: block;
+    }
+
+
+
+    
+    
+    
+    #check2+.drop2+ul{
+        display: none;
+    }
+    #check2:checked+.drop2+ul{
+        display: block;
+    }
+    
+    
+    
+    #check3+.drop3 +ul{
+        display: none;
+    }
+    #check3:checked+.drop3+ul{
+        display: block;
+    }
+
+
+
+
+    
 #download {
     background: #796EFF;
 }
