project done again venera

--- a/components/styles/footer/section-footer.css
+++ b/components/styles/footer/section-footer.css
@@ -72,6 +72,10 @@ font-weight: 400;
         flex-direction: column;
         gap: 20px;
     }
+
+    label{
+        display: block;
+    }
     
 }
 
